[gd_scene load_steps=10 format=3 uid="uid://tfhsevpvcvoq"]

[ext_resource type="Texture2D" uid="uid://d322n80a42kvw" path="res://art/mainmenubg2.png" id="1_26p2m"]
[ext_resource type="Script" path="res://script/pause_menu.gd" id="1_katsl"]
[ext_resource type="AudioStream" uid="uid://fo02qtpd4yle" path="res://music/pause.wav" id="3_876ih"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck5pj"]
texture = ExtResource("1_26p2m")
modulate_color = Color(0.605274, 0.605274, 0.605274, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3pi6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2jo01"]
bg_color = Color(0.126576, 0.513521, 0.850622, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggmqa"]
bg_color = Color(0.12549, 0.513726, 0.85098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7bs7y"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_fwjl4"]
font_size = 25

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_katsl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ck5pj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -73.0
offset_right = 101.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_3pi6x")
theme_override_styles/normal = SubResource("StyleBoxFlat_2jo01")
text = "Resume"

[node name="restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_3pi6x")
theme_override_styles/normal = SubResource("StyleBoxFlat_2jo01")
text = "Restart"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_3pi6x")
theme_override_styles/normal = SubResource("StyleBoxFlat_2jo01")
text = "Back to Main Menu"

[node name="AudioOptions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 274.0
offset_top = 148.0
offset_right = 490.0
offset_bottom = 535.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ggmqa")

[node name="Music" type="Label" parent="AudioOptions"]
layout_mode = 2
offset_left = 19.0
offset_top = 26.0
offset_right = 104.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "Music
"
label_settings = SubResource("LabelSettings_7bs7y")

[node name="Music_Slider" type="VSlider" parent="AudioOptions"]
layout_mode = 2
offset_left = 46.0
offset_top = 81.0
offset_right = 62.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
min_value = -30.0
max_value = 0.0

[node name="SFX" type="Label" parent="AudioOptions"]
layout_mode = 2
offset_left = 131.0
offset_top = 26.0
offset_right = 201.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
text = "SFX"
label_settings = SubResource("LabelSettings_fwjl4")

[node name="SFX_Slider" type="VSlider" parent="AudioOptions"]
layout_mode = 2
offset_left = 144.0
offset_top = 81.0
offset_right = 160.0
offset_bottom = 341.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
min_value = -30.0
max_value = 0.0

[node name="open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_876ih")
volume_db = -10.0
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="mouse_exited" from="AudioOptions/Music_Slider" to="." method="_on_music_slider_mouse_exited"]
[connection signal="value_changed" from="AudioOptions/Music_Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="mouse_exited" from="AudioOptions/SFX_Slider" to="." method="_on_sfx_slider_mouse_exited"]
[connection signal="value_changed" from="AudioOptions/SFX_Slider" to="." method="_on_sfx_slider_value_changed"]
